Multiple Style fixes.

--- a/rps.css
+++ b/rps.css
@@ -2,14 +2,47 @@ body {
     background-color: lightblue;
   }
 
-  #selectors { /* Container that holds buttons */
-      position:absolute;
-      top:50%;
-      left:50%;
-      transform: translate(-50%, -50%);
+  #messageBox{
+    font-size:15px;    
   }
 
-  .btn { /* Button Styling */
+#gameBox{
+  align-items:center;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  height:250px;
+  width:400px;
+  margin:0 auto;
+}
+
+.resetBtn{
+  border:1px solid black;
+  box-shadow: 2px 2px black;
+  color:black;
+  border-radius:5px 5px 5px;
+  padding:2px;
+  font-size:10px;
+}
+.resetBtn:active{
+  box-shadow:none;
+  transform:translate(3px, 2px);
+}
+g
+.section{
+  border:1px solid red;
+}
+
+p {
+  display:inline-flex;
+  margin-right:5px;
+}
+
+.info{
+  color:black;
+}
+
+  .btn { /* User Button Styling */
     background-color: lightblue; 
     border: none; 
     color: black;
@@ -17,7 +50,17 @@ body {
     cursor: pointer; /* Mouse pointer on hover */
   }
   
+  .userTitle {
+    font-size: 12px;
+  }
+  
   /* Icon size increase on hover */
   .btn:hover {
-    font-size:80px;
+    color: azure;
   }
+
+  .resetBtn:hover {
+  color:azure;
+  cursor:pointer;
+  
+}
